src/test/deca/context/valid/provided/test17.deca
class A{
    float sakofa7(int x){
        return x;
    }
}