src/test/deca/context/invalid/provided/testi19.deca
//Resultats :
//Erreur contextuelle
//Ligne 8 : Invalid cast
class A{}
{
    float x;
    A a = new A();
    x = (float)(a);
}